# ChangeLog for app-admin/otpcalc
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/otpcalc/Attic/ChangeLog,v 1.23 2007/12/25 15:27:02 phreak Exp $

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing taviso from metadata.xml as per #202471. Assigning to
  maintainer-needed.

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  29 Oct 2006; Tavis Ormandy <taviso@gentoo.org> -otpcalc-0.96.ebuild,
  -otpcalc-0.97.ebuild:
  remove stale ebuilds

  19 Apr 2006; Thomas Cort <tcort@gentoo.org> otpcalc-0.97-r1.ebuild:
  Stable on alpha wrt Bug #123993.

  19 Apr 2006; Tavis Ormandy <taviso@gentoo.org>
  +files/otpcalc-crypto-proto.diff, otpcalc-0.97-r1.ebuild:
  correct cypto prototypes with patch from tcort #123993

  27 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  otpcalc-0.97-r1.ebuild:
  Stable on sparc wrt #123993

  26 Feb 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  otpcalc-0.97-r1.ebuild:
  ppc stable, bug #123993

  25 Feb 2006; Mark Loeser <halcy0n@gentoo.org> otpcalc-0.97-r1.ebuild:
  Stable on x86; bug #123993

*otpcalc-0.97-r1 (24 Feb 2006)

  24 Feb 2006; Tavis Ormandy <taviso@gentoo.org>
  +files/otpcalc-0.97-badindex.diff, +otpcalc-0.97-r1.ebuild:
  fix #123976, not enough elements allocated for array of func ptrs.

  24 Feb 2006; Tavis Ormandy <taviso@gentoo.org> otpcalc-0.97.ebuild:
  #123950 kill virtual/x11 dep

  20 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org> otpcalc-0.97.ebuild:
  Stable on sparc

  03 Jul 2005; Michael Hanselmann <hansmi@gentoo.org> otpcalc-0.97.ebuild:
  Stable on ppc.

  22 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org> otpcalc-0.97.ebuild:
  To ~sparc

*otpcalc-0.97 (06 Jun 2005)

  06 Jun 2005; Tavis Ormandy <taviso@gentoo.org> otpcalc-0.97.ebuild:
  stable on x86
