@@ -14,25 +14,25 @@ MD5 79ac858c43e67fdc670c1092b51a03ad files/otpcalc-man-table-format.diff 507
 RMD160 2eaf50bdd0f50f70ff1ddac7d56bcfaadc8be9d1 files/otpcalc-man-table-format.diff 507
 SHA256 cec72cec708bf6edf75c6236d8811544a9258c2b2710c520ee2c6acb65a599dd files/otpcalc-man-table-format.diff 507
 DIST otpCalc-0.97.tar.gz 123704 RMD160 0b7908f90fede73e23f25cb0ebd0f9e87393a2a2 SHA1 0ca443baf05ed491e49419345ec815256a822b8c SHA256 e2c19fa6178ed42f0576650db6f94942cac366feadf82c2a679b35197c65f745
-EBUILD otpcalc-0.97-r1.ebuild 950 RMD160 4f25ec2a922a74d831d416124b4256d7a1a0f233 SHA1 448d8f9f1ce3101dcfd998a8c6e85c237cc98856 SHA256 df6963a7b3b382ee5088df0657c0d16e18866b33ffc4a66872e4fa1ed9e650ee
-MD5 54958d18482b74f5ef8d1be7e25da428 otpcalc-0.97-r1.ebuild 950
-RMD160 4f25ec2a922a74d831d416124b4256d7a1a0f233 otpcalc-0.97-r1.ebuild 950
-SHA256 df6963a7b3b382ee5088df0657c0d16e18866b33ffc4a66872e4fa1ed9e650ee otpcalc-0.97-r1.ebuild 950
-MISC ChangeLog 2576 RMD160 d82e5eea98118c24de80abd553181aa5f66daeb7 SHA1 f017561213ea1a510e29a643214205ad8172c7a5 SHA256 a7a54c70e89bae3d9a1f7c093379ddd74b8641f987b16933e958cac29c0e78b3
-MD5 e2b547ed0858075dcb698472c1cc238e ChangeLog 2576
-RMD160 d82e5eea98118c24de80abd553181aa5f66daeb7 ChangeLog 2576
-SHA256 a7a54c70e89bae3d9a1f7c093379ddd74b8641f987b16933e958cac29c0e78b3 ChangeLog 2576
-MISC metadata.xml 411 RMD160 12d1af6e1f4d11e9293d5d21b1c7d4c98df08a7b SHA1 695d9e3ebf8b271f95ea11c4f7fb73303a30f3ae SHA256 c8945ec1b010ebd64f1dd9394642d82cbf5ccb5272ff8724cdb2c60b0ef5f0f7
-MD5 7646421d81b96345009aa2ff3b793610 metadata.xml 411
-RMD160 12d1af6e1f4d11e9293d5d21b1c7d4c98df08a7b metadata.xml 411
-SHA256 c8945ec1b010ebd64f1dd9394642d82cbf5ccb5272ff8724cdb2c60b0ef5f0f7 metadata.xml 411
+EBUILD otpcalc-0.97-r1.ebuild 953 RMD160 042f265ceba6e23f4e6462efbf594027d038f037 SHA1 00b5786717e81c402ccf4b43cc2ae93029dfaf6d SHA256 ae1b6cc2d5f6ae997b130bdf38738caa79e7f3b0f7ec52642b447f675a45dab0
+MD5 3ef79ee41cd5cc814dd115d6c2d297b4 otpcalc-0.97-r1.ebuild 953
+RMD160 042f265ceba6e23f4e6462efbf594027d038f037 otpcalc-0.97-r1.ebuild 953
+SHA256 ae1b6cc2d5f6ae997b130bdf38738caa79e7f3b0f7ec52642b447f675a45dab0 otpcalc-0.97-r1.ebuild 953
+MISC ChangeLog 2705 RMD160 97412e8776537ba745b5dd53a07e5fd98673bcd1 SHA1 d81df494bf7fdc19bd8c1b2e3ce98874048204dc SHA256 be6236fb7a15e9a2089a62f3bfb12f1ff6f563b70f33327a2c48caf905a5f4f6
+MD5 d136ad61f459713d4c123a2824074d09 ChangeLog 2705
+RMD160 97412e8776537ba745b5dd53a07e5fd98673bcd1 ChangeLog 2705
+SHA256 be6236fb7a15e9a2089a62f3bfb12f1ff6f563b70f33327a2c48caf905a5f4f6 ChangeLog 2705
+MISC metadata.xml 392 RMD160 500534c054b9f912fb7b5742b23a9f65c97d69de SHA1 2b568d2d16c861ae39a99271da305945b79344bc SHA256 3a48ceb0870d309c72fcb1064dec7333e3dacd3abe2596c82dce780a5643fdcb
+MD5 f77c7d73d045ba09255fdd98bb9aa291 metadata.xml 392
+RMD160 500534c054b9f912fb7b5742b23a9f65c97d69de metadata.xml 392
+SHA256 3a48ceb0870d309c72fcb1064dec7333e3dacd3abe2596c82dce780a5643fdcb metadata.xml 392
 MD5 2bf41722756bf4572eb4d0c5e7dd4d88 files/digest-otpcalc-0.97-r1 238
 RMD160 57367cff98792c0bf64c7629f7bc85cc52fd17ae files/digest-otpcalc-0.97-r1 238
 SHA256 1655a62fd47487dca1851278538a0e5a0af1e679b445bd65b48aee89e1f51cbb files/digest-otpcalc-0.97-r1 238
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v1.4.8 (GNU/Linux)
 
-iD8DBQFHcSFMyuNVb5qfaOYRAihaAKCZtfoeXQaaFi+5gs8qbD5VEe9YKACfa/DO
-VxnVJ5W2L7HPZBNNZYkY1eY=
-=yFq7
+iEYEARECAAYFAkdxZewACgkQOeoy/oIi7uyfNgCgnj2HGdK+rXXuMV+P75W26DTc
+AUgAoMQnETM0G1G5Q0w3+/f0n9X000hJ
+=/ZlC
 -----END PGP SIGNATURE-----
