@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>no-herd</herd>
-	<maintainer>
-		<email>maintainer-needed@gentoo.org</email>
-	</maintainer>
-	<longdescription lang="en">
-		otpCalc is an RFC2289 and RFC1760 compliant one time password
-		calculator, written to use the GTK+ library for screen I/O.
-	</longdescription>
+<herd>no-herd</herd>
+<maintainer>
+  <email>ulm@gentoo.org</email>
+</maintainer>
+<longdescription lang="en">
+  otpCalc is an RFC2289 and RFC1760 compliant one time password calculator,
+  written to use the GTK+ library for screen I/O.
+</longdescription>
 </pkgmetadata>
