@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/otpcalc/Attic/otpcalc-0.97-r1.ebuild,v 1.6 2006/04/19 13:42:57 tcort Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/otpcalc/Attic/otpcalc-0.97-r1.ebuild,v 1.7 2007/12/25 20:19:35 ulm Exp $
 
 inherit eutils
 
@@ -10,7 +10,7 @@ SRC_URI="http://killa.net/infosec/otpCalc/otpCalc-${PV}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha ppc sparc x86"
+KEYWORDS="alpha ~amd64 ppc sparc x86"
 IUSE=""
 
 DEPEND="=x11-libs/gtk+-1.2* virtual/libc"
@@ -18,17 +18,18 @@ DEPEND="=x11-libs/gtk+-1.2* virtual/libc"
 S=${WORKDIR}/${P/c/C}
 
 src_unpack() {
-	unpack ${A}; cd ${S}
+	unpack ${A}
+	cd "${S}"
 
-	epatch ${FILESDIR}/otpcalc-man-table-format.diff
-	epatch ${FILESDIR}/otpcalc-0.97-badindex.diff
-	epatch ${FILESDIR}/otpcalc-crypto-proto.diff
+	epatch "${FILESDIR}/otpcalc-man-table-format.diff"
+	epatch "${FILESDIR}/otpcalc-0.97-badindex.diff"
+	epatch "${FILESDIR}/otpcalc-crypto-proto.diff"
 
 	# print correct version in manpage
-	sed -i -e "s/VERSION/${PV}/g" ${S}/otpCalc.man
+	sed -i -e "s/VERSION/${PV}/g" otpCalc.man
 
 	# override hardcoded CFLAGS
-	sed -i "s#-s -O3#${CFLAGS}#g" ${S}/Makefile.in
+	sed -i "s#-s -O3#${CFLAGS}#g" Makefile.in
 }
 
 src_install() {
