@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/otpcalc
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/otpcalc/Attic/ChangeLog,v 1.23 2007/12/25 15:27:02 phreak Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/otpcalc/Attic/ChangeLog,v 1.24 2007/12/25 20:19:35 ulm Exp $
+
+  25 Dec 2007; Ulrich Mueller <ulm@gentoo.org> metadata.xml,
+  otpcalc-0.97-r1.ebuild:
+  Add myself as maintainer. Keyword ~amd64.
 
   25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
   Removing taviso from metadata.xml as per #202471. Assigning to
